ドラッグ & ドロップテスト中

--- a/imgui.ini
+++ b/imgui.ini
@@ -148,6 +148,12 @@ Size=7,32
 Collapsed=0
 DockId=0x0000000E,1
 
+[Window][System]
+Pos=25,34
+Size=7,32
+Collapsed=0
+DockId=0x0000000E,1
+
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
@@ -162,14 +168,14 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
     DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
     DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,42 HiddenTabBar=1 Selected=0xE4AF3456
   DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1318 Split=Y
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,899 Split=X
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,880 Split=X
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1929,982 Split=X Selected=0xCCA64F5D
-            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=374,982 Selected=0xD2CD21AB
-            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1553,982 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=629,982 Selected=0xCDB73424
+          DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1997,982 Split=X Selected=0xCCA64F5D
+            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=644,982 Selected=0xD2CD21AB
+            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1351,982 CentralNode=1 Selected=0xF3E10FF5
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=561,982 Selected=0x1F3F22F7
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,417 Selected=0x98A88EA8
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,436 Selected=0x98A88EA8
 
