--- a/imgui.ini
+++ b/imgui.ini
@@ -135,7 +135,7 @@ DockId=0x00000007,0
 Pos=13,34
 Size=10,32
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000C,1
 
 [Window][Size Text]
 Pos=0,34
@@ -165,7 +165,7 @@ DockId=0x0000000C,1
 Pos=13,34
 Size=10,32
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x0000000C,0
 
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
@@ -186,9 +186,9 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
           DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1997,982 Split=X Selected=0xCCA64F5D
-            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=545,982 Selected=0xD2CD21AB
+            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=545,982 Selected=0x096F3BE0
             DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1450,982 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=561,982 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=561,982 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,436 Selected=0x98A88EA8
 
