--- a/imgui.ini
+++ b/imgui.ini
@@ -134,7 +134,7 @@ DockId=0x00000007,0
 Pos=13,34
 Size=10,32
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x0000000C,0
 
 [Window][Size Text]
 Pos=0,34
@@ -164,15 +164,25 @@ DockId=0x0000000C,1
 Pos=13,34
 Size=10,32
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000C,1
+
+[Window][Rename]
+Pos=910,1141
+Size=300,300
+Collapsed=0
+
+[Window][Rename]
+Pos=790,1145
+Size=300,300
+Collapsed=0
 
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
 
 [Table][0xBA570601,2]
-Column 0  Weight=0.2503
-Column 1  Weight=1.7497
+Column 0  Weight=0.3113
+Column 1  Weight=1.6887
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
@@ -185,9 +195,9 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
           DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1997,982 Split=X Selected=0xCCA64F5D
-            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=545,982 Selected=0xD2CD21AB
+            DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=545,982 Selected=0x096F3BE0
             DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1450,982 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=561,982 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=561,982 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,436 Selected=0x98A88EA8
 
