--- a/imgui.ini
+++ b/imgui.ini
@@ -55,8 +55,8 @@ Size=100,48
 Collapsed=0
 
 [Window][Content]
-Pos=0,1007
-Size=2560,433
+Pos=0,36
+Size=32,32
 Collapsed=0
 DockId=0x00000007,1
 
@@ -68,7 +68,7 @@ DockId=0x0000000C,2
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2560,1440
+Size=46,32
 Collapsed=0
 
 [Window][Hierarchy]
@@ -85,7 +85,7 @@ DockId=0x00000004,0
 
 [Window][Menu Bar]
 Pos=0,31
-Size=2560,45
+Size=32,32
 Collapsed=0
 DockId=0x00000009,0
 
@@ -101,8 +101,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][##Tool Bar]
-Pos=0,78
-Size=2560,53
+Pos=0,33
+Size=32,32
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -113,8 +113,8 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][ Hierarchy]
-Pos=0,133
-Size=545,872
+Pos=0,34
+Size=15,32
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -125,20 +125,20 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][ Project]
-Pos=0,1007
-Size=2560,433
+Pos=0,36
+Size=32,32
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Scene]
-Pos=547,133
-Size=2013,872
+Pos=17,34
+Size=15,32
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Size Text]
-Pos=0,133
-Size=545,872
+Pos=0,34
+Size=15,32
 Collapsed=0
 DockId=0x0000000B,1
 
@@ -161,8 +161,8 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Game]
-Pos=547,133
-Size=2013,872
+Pos=17,34
+Size=15,32
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -185,8 +185,8 @@ Column 0  Weight=0.3113
 Column 1  Weight=1.6887
 
 [Docking][Data]
-DockNode            ID=0x0000000E Pos=2000,132 Size=561,869 Selected=0x1F3F22F7
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=2560,1409 Split=Y Selected=0xCCA64F5D
+DockNode            ID=0x0000000E Pos=2000,132 Size=561,869 Selected=0xEDB0D437
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
   DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,100 Split=Y Selected=0x1C39D6E4
     DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
     DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,53 HiddenTabBar=1 Selected=0xE4AF3456
@@ -195,7 +195,7 @@ DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=2560,1409 Spli
       DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0xD2CD21AB
+          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0x096F3BE0
           DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=1450,982 CentralNode=1 Selected=0xF3E10FF5
       DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0x98A88EA8
