Prefabをヒエラルキーから作成完了

--- a/imgui.ini
+++ b/imgui.ini
@@ -195,7 +195,7 @@ DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y S
       DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0x096F3BE0
+          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0xD2CD21AB
           DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=1450,982 CentralNode=1 Selected=0xF3E10FF5
       DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0x98A88EA8
