--- a/imgui.ini
+++ b/imgui.ini
@@ -137,10 +137,10 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Size Text]
-Pos=0,34
-Size=15,32
+Pos=2000,132
+Size=561,869
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x0000000E,2
 
 [Window][System Inspector]
 Pos=25,34
@@ -172,7 +172,7 @@ Size=300,300
 Collapsed=0
 
 [Window][Rename]
-Pos=790,1145
+Pos=790,1148
 Size=300,300
 Collapsed=0
 
@@ -187,15 +187,15 @@ Column 1  Weight=1.6887
 [Docking][Data]
 DockNode            ID=0x0000000E Pos=2000,132 Size=561,869 Selected=0xEDB0D437
 DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,100 Split=Y Selected=0x1C39D6E4
+  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,109 Split=Y Selected=0x1C39D6E4
     DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
-    DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,53 HiddenTabBar=1 Selected=0xE4AF3456
-  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1307 Split=Y
-    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=2560,872 Split=X
+    DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,62 HiddenTabBar=1 Selected=0xE4AF3456
+  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1298 Split=Y
+    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=2560,863 Split=X
       DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0x096F3BE0
+          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0xD2CD21AB
           DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=1450,982 CentralNode=1 Selected=0xF3E10FF5
       DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0x98A88EA8
