SceneLoader(読み込み部分)完成

--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="Source\Engine\resource_manager.h" />
     <ClInclude Include="Source\Engine\sampler_mapping.h" />
     <ClInclude Include="Source\Engine\sample_shader.h" />
+    <ClInclude Include="Source\Engine\scene_loader.h" />
     <ClInclude Include="Source\Engine\scene_view.h" />
     <ClInclude Include="Source\Engine\scene_view_camera.h" />
     <ClInclude Include="Source\Engine\shader_asset.h" />
@@ -268,6 +269,7 @@
     <ClCompile Include="Source\Engine\scene.cpp" />
     <ClCompile Include="Source\Engine\scene_game.cpp" />
     <ClCompile Include="Source\Engine\scene_load.cpp" />
+    <ClCompile Include="Source\Engine\scene_loader.cpp" />
     <ClCompile Include="Source\Engine\scene_view.cpp" />
     <ClCompile Include="Source\Engine\scene_view_camera.cpp" />
     <ClCompile Include="Source\Engine\shader.cpp" />
