--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -558,6 +558,9 @@
     <ClCompile Include="Source\Engine\prefab.cpp">
       <Filter>Source\Engine\System</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\scene_loader.cpp">
+      <Filter>Source\Engine\Loader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\scene.h">
@@ -1015,6 +1018,9 @@
     </ClInclude>
     <ClInclude Include="Source\Engine\prefab.h">
       <Filter>Header\Engine\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\scene_loader.h">
+      <Filter>Header\Engine\Loader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
