--- a/imgui.ini
+++ b/imgui.ini
@@ -176,6 +176,16 @@ Pos=790,1148
 Size=300,300
 Collapsed=0
 
+[Window][Delete?]
+Pos=1003,625
+Size=554,190
+Collapsed=0
+
+[Window][Create New Scene]
+Pos=926,627
+Size=708,186
+Collapsed=0
+
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
