--- a/imgui.ini
+++ b/imgui.ini
@@ -186,6 +186,12 @@ Pos=926,627
 Size=708,186
 Collapsed=0
 
+[Window][Hierarchy Data]
+Pos=2001,132
+Size=561,869
+Collapsed=0
+DockId=0x0000000E,3
+
 [Table][0x48072B15,2]
 Column 0  Weight=0.3287
 Column 1  Weight=1.6713
