--- a/imgui.ini
+++ b/imgui.ini
@@ -119,8 +119,8 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ Inspector]
-Pos=2001,132
-Size=561,869
+Pos=25,34
+Size=7,32
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -132,13 +132,13 @@ DockId=0x00000007,0
 
 [Window][ Scene]
 Pos=17,34
-Size=15,32
+Size=6,32
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000D,0
 
 [Window][Size Text]
-Pos=2001,132
-Size=561,869
+Pos=25,34
+Size=7,32
 Collapsed=0
 DockId=0x0000000E,2
 
@@ -149,8 +149,8 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Window][System]
-Pos=2001,132
-Size=561,869
+Pos=25,34
+Size=7,32
 Collapsed=0
 DockId=0x0000000E,1
 
@@ -162,9 +162,9 @@ DockId=0x0000000C,1
 
 [Window][Game]
 Pos=17,34
-Size=15,32
+Size=6,32
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x0000000D,1
 
 [Window][Rename]
 Pos=910,1141
@@ -187,8 +187,8 @@ Size=708,186
 Collapsed=0
 
 [Window][Hierarchy Data]
-Pos=2001,132
-Size=561,869
+Pos=25,34
+Size=7,32
 Collapsed=0
 DockId=0x0000000E,3
 
@@ -201,18 +201,19 @@ Column 0  Weight=0.3113
 Column 1  Weight=1.6887
 
 [Docking][Data]
-DockNode            ID=0x0000000E Pos=2001,132 Size=561,869 Selected=0xEDB0D437
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,90 Split=Y Selected=0x1C39D6E4
-    DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
-    DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,43 HiddenTabBar=1 Selected=0xE4AF3456
-  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1317 Split=Y
-    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=2560,882 Split=X
-      DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
-        DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
-        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0xD2CD21AB
-          DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=1450,982 CentralNode=1 Selected=0xF3E10FF5
-      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0x98A88EA8
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
+  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,90 Split=Y Selected=0x1C39D6E4
+    DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
+    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,43 HiddenTabBar=1 Selected=0xE4AF3456
+  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1317 Split=Y
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,882 Split=X
+      DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
+        DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
+        DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
+          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0xD2CD21AB
+          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=1450,982 Split=X Selected=0xF3E10FF5
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1359,882 CentralNode=1 Selected=0xF3E10FF5
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=498,882 Selected=0xFBA66117
+      DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0x98A88EA8
 
