--- a/imgui.ini
+++ b/imgui.ini
@@ -202,18 +202,18 @@ Column 1  Weight=1.6887
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,90 Split=Y Selected=0x1C39D6E4
+  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,95 Split=Y Selected=0x1C39D6E4
     DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,45 HiddenTabBar=1 Selected=0x1C39D6E4
-    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,43 HiddenTabBar=1 Selected=0xE4AF3456
-  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1317 Split=Y
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,882 Split=X
+    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,48 HiddenTabBar=1 Selected=0xE4AF3456
+  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1312 Split=Y
+    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,877 Split=X
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=545,982 Selected=0xD2CD21AB
-          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=1450,982 Split=X Selected=0xF3E10FF5
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1233,882 CentralNode=1 Selected=0xF3E10FF5
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=624,882 Selected=0xFBA66117
+          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=426,982 Selected=0xD2CD21AB
+          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2132,982 Split=X Selected=0xF3E10FF5
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1506,882 CentralNode=1 Selected=0xF3E10FF5
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=624,882 Selected=0x1F3F22F7
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,433 Selected=0x98A88EA8
 
