--- a/imgui.ini
+++ b/imgui.ini
@@ -213,7 +213,7 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
           DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=345,982 Selected=0xD2CD21AB
           DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2213,982 Split=X Selected=0xF3E10FF5
             DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1673,882 CentralNode=1 Selected=0xF3E10FF5
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=538,882 Selected=0xFBA66117
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=538,882 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,346 Selected=0x98A88EA8
 
