--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=0,0
-Size=912,648
+Pos=127,309
+Size=165,129
 Collapsed=0
 
 [Window][Scene01]
@@ -210,10 +210,10 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
       DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
-          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=345,982 Selected=0xD2CD21AB
-          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2213,982 Split=X Selected=0xF3E10FF5
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1673,882 CentralNode=1 Selected=0xF3E10FF5
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=538,882 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=323,982 Selected=0xD2CD21AB
+          DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=2235,982 Split=X Selected=0xF3E10FF5
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=1634,882 CentralNode=1 Selected=0xF3E10FF5
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=599,882 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
     DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,346 Selected=0x98A88EA8
 
